unpackaged/main/default/objects/Credit_Report_Details__c/Credit_Report_Details__c.object-meta.xml
<CustomObject>
    <label>Credit Report Details</label>
    <nameField>
        <label>Credit Report Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Report Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>