unpackaged/main/default/objects/Credit_Report_Details__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>