unpackaged/main/default/objects/Credit_Report_Details__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Credit Report Details</relationshipLabel>
    <relationshipName>Credit_Report_Details</relationshipName>
    <type>Lookup</type>
</CustomField>