unpackaged/main/default/objects/Credit_Report_Details__c/fields/Credit_Policy__c.field-meta.xml
<CustomField>
    <fullName>Credit_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Policy</label>
    <referenceTo>Credit_Policy__c</referenceTo>
    <relationshipLabel>Credit Report Details</relationshipLabel>
    <relationshipName>Credit_Report_Details</relationshipName>
    <type>Lookup</type>
</CustomField>