unpackaged/main/default/objects/Credit_Report_Details__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <label>Date Closed</label>
    <length>30</length>
    <type>Text</type>
</CustomField>