unpackaged/main/default/objects/Credit_Report_Details__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <label>Date Opened</label>
    <length>30</length>
    <type>Text</type>
</CustomField>