unpackaged/main/default/objects/Credit_Report_Details__c/fields/High_credit__c.field-meta.xml
<CustomField>
    <fullName>High_credit__c</fullName>
    <label>High credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>