unpackaged/main/default/objects/Credit_Report_Details__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>