unpackaged/main/default/objects/Credit_Report_Details__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>